// Vitest Snapshot v1

exports[`CdrLink > basic link component > renders correctly 1`] = `
<a
  class="cdr-link"
  href="#"
>
  <!-- @slot Readable text of the link  -->
  
  
</a>
`;

exports[`CdrLink > basic link component > when tag has been set to button > renders a link with a button element and no href attribute 1`] = `
<button
  class="cdr-link"
>
  <!-- @slot Readable text of the link  -->
  
  
</button>
`;

exports[`CdrLink > basic link component > when target prop is set > renders correctly 1`] = `
<a
  class="cdr-link"
  href="#"
  target="_self"
>
  <!-- @slot Readable text of the link  -->
  
  
</a>
`;

exports[`CdrLink > basic link component > when the tag has been set to button > renders a link with a button element and no href attribute 1`] = `
<button
  class="cdr-link"
>
  <!-- @slot Readable text of the link  -->
  
  
</button>
`;

exports[`CdrLink > basic link component > when the target prop has been set to "_blank" > renders correctly 1`] = `
<a
  class="cdr-link"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <!-- @slot Readable text of the link  -->
  
  
</a>
`;

exports[`CdrLink > basic link component > with href prop set > renders correctly 1`] = `
<a
  class="cdr-link"
  href="www.rei.com"
>
  <!-- @slot Readable text of the link  -->
  
  
</a>
`;

exports[`CdrLink > basic link component > with rel prop set to "nofollow" > renders correctly 1`] = `
<a
  class="cdr-link"
  href="#"
  rel="nofollow"
>
  <!-- @slot Readable text of the link  -->
  
  
</a>
`;
